[package]
name = "stringify"
version = "0.1.0"
edition = "2021"
authors = ["Yasir Arafat <yasirarafat1995@gmail.com>"]
description="Stringify is a Rust library for manipulating strings"
license = "MIT"
repository="https://github.com/yasirarafat28/geolocation.git"
documentation="https://docs.rs/geolocation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.0"
regex = "1.0"
